listen to the websocket and fetch images when  available
